@@ -23,10 +23,7 @@ import com.backbase.stream.legalentity.model.LegalEntity;
 import com.backbase.stream.legalentity.model.ProductGroup;
 import com.backbase.stream.legalentity.model.ServiceAgreement;
 import com.backbase.stream.legalentity.model.User;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import javax.validation.Validator;
+
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
@@ -37,64 +34,80 @@ import org.mapstruct.factory.Mappers;
 import org.mockito.Answers;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
+import javax.validation.Validator;
 
 @ExtendWith(MockitoExtension.class)
 class LegalEntityIngestionServiceImplTest {
 
     private LegalEntityIngestionService legalEntityIngestionService;
 
-    @Mock
-    private LegalEntityIntegrationService legalEntityIntegrationService;
+    @Mock private LegalEntityIntegrationService legalEntityIntegrationService;
 
     LegalEntityMapper mapper = Mappers.getMapper(LegalEntityMapper.class);
 
-    @Mock
-    Validator validator;
+    @Mock Validator validator;
 
-    @Mock
-    LegalEntitySaga legalEntitySaga;
+    @Mock LegalEntitySaga legalEntitySaga;
 
     LegalEntityPostIngestionService legalEntityPostIngestionService;
 
-    @Mock
-    EventBus eventBus;
+    @Mock EventBus eventBus;
 
     @Mock(answer = Answers.RETURNS_DEEP_STUBS)
     LegalEntityConfigurationProperties config;
 
-    @Mock
-    ProductCompositionApi productCompositionApi;
+    @Mock ProductCompositionApi productCompositionApi;
 
     @BeforeEach
     void setUp() {
-        legalEntityPostIngestionService = new LegalEntityPostIngestionServiceImpl(eventBus, config,
-                productCompositionApi, mapper);
+        legalEntityPostIngestionService =
+                new LegalEntityPostIngestionServiceImpl(
+                        eventBus, config, productCompositionApi, mapper);
 
-        legalEntityIngestionService = new LegalEntityIngestionServiceImpl(
-                legalEntitySaga,
-                legalEntityIntegrationService,
-                validator,
-                legalEntityPostIngestionService);
+        legalEntityIngestionService =
+                new LegalEntityIngestionServiceImpl(
+                        legalEntitySaga,
+                        legalEntityIntegrationService,
+                        validator,
+                        legalEntityPostIngestionService);
     }
-
 
     @Test
     @Tag("true")
     void ingestionInPullModeAsync_Success(TestInfo testInfo) {
         List<String> tags = new ArrayList<>(testInfo.getTags());
         when(productCompositionApi.pullIngestProduct(any()))
-                .thenReturn(Mono.just(new ProductIngestionResponse()
-                        .withProductGroups(
-                                Arrays.asList((com.backbase.stream.compositions.product.client.model.ProductGroup)
-                                        new com.backbase.stream.compositions.product.client.model.ProductGroup()
-                                                .withCurrentAccounts(List.of(new CurrentAccount().withBBAN("test BBAN")))))));
+                .thenReturn(
+                        Mono.just(
+                                new ProductIngestionResponse()
+                                        .withProductGroups(
+                                                Arrays.asList(
+                                                        (com.backbase.stream.compositions.product
+                                                                        .client.model.ProductGroup)
+                                                                new com.backbase.stream.compositions
+                                                                                .product.client
+                                                                                .model
+                                                                                .ProductGroup()
+                                                                        .withCurrentAccounts(
+                                                                                List.of(
+                                                                                        new CurrentAccount()
+                                                                                                .withBBAN(
+                                                                                                        "test BBAN")))))));
 
-        Mono<LegalEntityResponse> legalEntityIngestResponseMono = executeIngestionWithPullMode(
-                Boolean.valueOf(tags.get(0)), Boolean.TRUE, Boolean.TRUE);
+        Mono<LegalEntityResponse> legalEntityIngestResponseMono =
+                executeIngestionWithPullMode(
+                        Boolean.valueOf(tags.get(0)), Boolean.TRUE, Boolean.TRUE);
         StepVerifier.create(legalEntityIngestResponseMono)
-            .assertNext(Assertions::assertNotNull).verifyComplete();
+                .assertNext(Assertions::assertNotNull)
+                .verifyComplete();
     }
 
     @Test
@@ -103,16 +116,29 @@ class LegalEntityIngestionServiceImplTest {
         List<String> tags = new ArrayList<>(testInfo.getTags());
         when(config.getChains().getIncludeSubsidiaries()).thenReturn(Boolean.TRUE);
         when(productCompositionApi.pullIngestProduct(any()))
-                .thenReturn(Mono.just(new ProductIngestionResponse()
-                        .withProductGroups(
-                                Arrays.asList((com.backbase.stream.compositions.product.client.model.ProductGroup)
-                                        new com.backbase.stream.compositions.product.client.model.ProductGroup()
-                                                .withCurrentAccounts(List.of(new CurrentAccount().withBBAN("test BBAN")))))));
+                .thenReturn(
+                        Mono.just(
+                                new ProductIngestionResponse()
+                                        .withProductGroups(
+                                                Arrays.asList(
+                                                        (com.backbase.stream.compositions.product
+                                                                        .client.model.ProductGroup)
+                                                                new com.backbase.stream.compositions
+                                                                                .product.client
+                                                                                .model
+                                                                                .ProductGroup()
+                                                                        .withCurrentAccounts(
+                                                                                List.of(
+                                                                                        new CurrentAccount()
+                                                                                                .withBBAN(
+                                                                                                        "test BBAN")))))));
 
-        Mono<LegalEntityResponse> legalEntityIngestResponseMono = executeIngestionWithPullMode(
-                Boolean.valueOf(tags.get(0)), Boolean.TRUE, Boolean.TRUE);
+        Mono<LegalEntityResponse> legalEntityIngestResponseMono =
+                executeIngestionWithPullMode(
+                        Boolean.valueOf(tags.get(0)), Boolean.TRUE, Boolean.TRUE);
         StepVerifier.create(legalEntityIngestResponseMono)
-            .assertNext(Assertions::assertNotNull).verifyComplete();
+                .assertNext(Assertions::assertNotNull)
+                .verifyComplete();
     }
 
     @Test
@@ -120,8 +146,9 @@ class LegalEntityIngestionServiceImplTest {
     void ingestionInPullModeSync_Fail(TestInfo testInfo) {
         List<String> tags = new ArrayList<>(testInfo.getTags());
         when(config.isFailedEventEnabled()).thenReturn(Boolean.TRUE);
-        Mono<LegalEntityResponse> legalEntityIngestResponseMono = executeIngestionWithPullMode(
-                Boolean.valueOf(tags.get(0)), Boolean.TRUE, Boolean.TRUE);
+        Mono<LegalEntityResponse> legalEntityIngestResponseMono =
+                executeIngestionWithPullMode(
+                        Boolean.valueOf(tags.get(0)), Boolean.TRUE, Boolean.TRUE);
         StepVerifier.create(legalEntityIngestResponseMono).expectError().verify();
     }
 
@@ -129,55 +156,69 @@ class LegalEntityIngestionServiceImplTest {
     @Tag("true")
     void ingestionInPullModeSyncProductChainDisabled_Success(TestInfo testInfo) {
         List<String> tags = new ArrayList<>(testInfo.getTags());
-        Mono<LegalEntityResponse> legalEntityIngestResponseMono = executeIngestionWithPullMode(
-                Boolean.valueOf(tags.get(0)), Boolean.FALSE, Boolean.FALSE);
+        Mono<LegalEntityResponse> legalEntityIngestResponseMono =
+                executeIngestionWithPullMode(
+                        Boolean.valueOf(tags.get(0)), Boolean.FALSE, Boolean.FALSE);
         StepVerifier.create(legalEntityIngestResponseMono)
-                .assertNext(Assertions::assertNotNull).verifyComplete();
+                .assertNext(Assertions::assertNotNull)
+                .verifyComplete();
     }
 
-    Mono<LegalEntityResponse> executeIngestionWithPullMode(Boolean isProductChainAsync,
-                                                           Boolean isProductChainEnabled, Boolean isProductChainEnabledFromRequest) {
-        LegalEntityPullRequest legalEntityIngestPullRequest = LegalEntityPullRequest.builder()
-                .legalEntityExternalId("externalId")
-                .build();
+    Mono<LegalEntityResponse> executeIngestionWithPullMode(
+            Boolean isProductChainAsync,
+            Boolean isProductChainEnabled,
+            Boolean isProductChainEnabledFromRequest) {
+        LegalEntityPullRequest legalEntityIngestPullRequest =
+                LegalEntityPullRequest.builder().legalEntityExternalId("externalId").build();
 
-        LegalEntityResponse res = new LegalEntityResponse(isProductChainEnabledFromRequest,
-                new LegalEntity().name("legalEntityName"), null, null);
+        LegalEntityResponse res =
+                new LegalEntityResponse(
+                        isProductChainEnabledFromRequest,
+                        new LegalEntity().name("legalEntityName"),
+                        null,
+                        null);
         when(legalEntityIntegrationService.pullLegalEntity(legalEntityIngestPullRequest))
                 .thenReturn(Mono.just(res));
 
         LegalEntityTask legalEntityTask = new LegalEntityTask();
         legalEntityTask.setLegalEntity(createLE().addSubsidiariesItem(createLE()));
 
-        when(legalEntitySaga.executeTask(any()))
-                .thenReturn(Mono.just(legalEntityTask));
+        when(legalEntitySaga.executeTask(any())).thenReturn(Mono.just(legalEntityTask));
 
         if (isProductChainEnabled) {
             when(config.isProductChainAsync()).thenReturn(isProductChainAsync);
         }
 
-        return legalEntityIngestionService
-                .ingestPull(legalEntityIngestPullRequest);
-
+        return legalEntityIngestionService.ingestPull(legalEntityIngestPullRequest);
     }
 
-    private LegalEntity createLE(){
+    private LegalEntity createLE() {
         return new LegalEntity()
-            .name("legalEntityName").internalId("internalId")
-            .externalId("externalId")
-            .masterServiceAgreement(
-                new ServiceAgreement().externalId("sa_externalId").internalId("sa_internalId"))
-            .users(List.of(new JobProfileUser()
-                .user(new User().internalId("user_internalId").externalId("user_externalId"))
-                .referenceJobRoleNames(List.of("Admin Role"))))
-            .productGroups(List.of(new ProductGroup()));
+                .name("legalEntityName")
+                .internalId("internalId")
+                .externalId("externalId")
+                .masterServiceAgreement(
+                        new ServiceAgreement()
+                                .externalId("sa_externalId")
+                                .internalId("sa_internalId"))
+                .users(
+                        List.of(
+                                new JobProfileUser()
+                                        .user(
+                                                new User()
+                                                        .internalId("user_internalId")
+                                                        .externalId("user_externalId"))
+                                        .referenceJobRoleNames(List.of("Admin Role"))))
+                .productGroups(List.of(new ProductGroup()));
     }
 
-    //@Test
+    // @Test
     void ingestionInPushMode_Unsupported() {
         LegalEntityPushRequest request = LegalEntityPushRequest.builder().build();
-        assertThrows(UnsupportedOperationException.class, () -> {
-            legalEntityIngestionService.ingestPush(request);
-        });
+        assertThrows(
+                UnsupportedOperationException.class,
+                () -> {
+                    legalEntityIngestionService.ingestPush(request);
+                });
     }
 }
